# gene-driver

./: CMakeLists.txt  GeneDriver.sln  README.md
GeneDriver/: AllegroProxy.cpp  AllegroProxy.h  BoundingBox.cpp  BoundingBox.h  Dimension2d.cpp  Dimension2d.h  GeneDriver.vcxproj  GeneDriver.vcxproj.filters  Painter.cpp  Painter.h  World.cpp  World.h  main.cpp
GeneDriver/Neural/: Network.cpp  Network.h  Network.h.bak
